# CarBaseAPI

./: .env.example  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2024-08-05_create_user_and_car_tables.py  2024-08-09_rename_tables.py
src/: __init__.py  config.py  database.py  main.py
src/abstract/: __init__.py  repository.py
src/application/: readme.txt
src/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py  unit_of_work.py  utils.py
src/cars/: enums.py  model.py  repository.py  router.py  schemas.py  service.py  unit_of_work.py
src/domain/cars/: __init__.py  entities.py  interfaces.py  repository.py  service.py
src/infrastructure/repositories/: __init__.py  car.py
src/infrastructure/uow/: car.py
src/presentation/api/v1/: __init__.py
src/presentation/api/v1/auth/: router.py
src/presentation/api/v1/cars/: router.py  schemas.py
tests/: conftest.py
tests/api/: test_cars_router.py
