[tool.poetry]
name = "test-task-solutions"
version = "0.1.0"
description = "Тестовое задание на бекенд разработчика в IT-Solutions"
authors = ["Starobogatov Alexey <Starobogatov.a@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.0"}
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.31"}
alembic = "^1.13.2"
pyjwt = "^2.9.0"
pytest = "^8.3.2"
asyncpg = "^0.29.0"
pydantic-settings = "^2.4.0"
bcrypt = "^4.2.0"
black = "^24.8.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
