[tool.poetry]
name = "test-task-solutions"
version = "0.1.0"
description = "Тестовое задание IT-Solutions"
authors = ["Starobogatov Alexey <Starobogatov.a@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.0"}
pydantic-settings = "^2.4.0"
SQLAlchemy = "^2.0.31"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
bcrypt = "^4.2.0"
PyJWT = "^2.9.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
